--- a/src/Resources/views/Administrator/settings.html.twig
+++ b/src/Resources/views/Administrator/settings.html.twig
@@ -35,6 +35,20 @@
                           </div>
                       </div>
                       </div>
+                            
+                            
+                <!-- CONFIGURACION DE HORARIO  -->
+                <div class="card">
+                <!-- TITULO -->
+                <div class="card-header">
+                <h4 class="card-title">Horario</h4>
+                </div>
+
+                <div class="card-body">
+                  {{form_start (schedule) }}
+                   {{form_end (schedule) }}
+                </div>
+                </div>
 
               <!-- CONFIGURACION DE CAFETERIAS   -->
               <div class="card">
@@ -50,7 +64,7 @@
                 </div>
 
 
-              <!-- CONFIGURACION DE NOTIFICACIONES  -->
+
 
    
     </div>
