--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -54,10 +54,6 @@
     <li class="nav-item">
       <a class="nav-link" href="profile/payment.html"><i class="icon-credit-card"></i>Balance</a>
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="profile/payment.html"><i class="icon-credit-card"></i>Bancos y tarjetas</a>
-    </li>
-
   </ul>
 </li>
 <!-- FIN CUCKEAT ADMIN -->
@@ -77,7 +73,7 @@
                 <a class="nav-link" href="menu/ingredient.html"><i class="icon-note"></i>Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu/product.html"><i class="icon-cup"></i>Bundles</a>
+                <a class="nav-link" href="menu/product.html"><i class="icon-cup"></i>Paquetes</a>
               </li>
             </ul>
           </li>
@@ -107,7 +103,7 @@
             <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-screen-desktop"></i> Punto de venta</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="pointofsale/access.html"><i class="icon-check"></i>Acceso</a>
+                <a class="nav-link" href="pointofsale/access.html"><i class="icon-check"></i>Accesos</a>
               </li>
             </ul>
           </li>
@@ -122,16 +118,7 @@
   <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-folder"></i>Reportes</a>
   <ul class="nav-dropdown-items">
     <li class="nav-item">
-      <a class="nav-link" href="data/session.html"><i class="icon-book-open"></i>Corte de Caja</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="data/income.html"><i class="icon-wallet"></i>Ingresos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="data/product.html"><i class="icon-basket-loaded"></i>Productos</a>
-    </li>
-    <li class="nav-item">
-      <a class="nav-link" href="data/user.html"><i class="icon-people"></i>Usuarios</a>
+      <a class="nav-link" href="data/session.html"><i class="icon-book-open"></i>Datos</a>
     </li>
   </ul>
 </li>
