--- a/templates/extra_theme.html.twig
+++ b/templates/extra_theme.html.twig
@@ -27,15 +27,16 @@
                 <div class="card-block">
                     <table {{ block('widget_attributes') }}>
                         <thead>
-                        <th>Ingrediente</th>
+                        <th>Extra</th>
+                        <th>Alias</th>
                         <th>Cantidad</th>
                         <th>Unidad</th>
+                        <th>Costo</th>
                         <th>&nbsp;</th>
                         </thead>
                         <tbody>
-
-                            {% for ingredient in form %}
-                                {{ form_widget(ingredient) }}
+                            {% for extra in form  %}
+                                {{ form_widget(extra) }}
                             {% endfor %}
 
                         </tbody>
@@ -48,19 +49,25 @@
     {% endspaceless %}
 {% endblock %}
 
-{% block ingredient_widget %}
+{% block extra_widget %}
 
     {# widget_attributes will generate class="item" from the DiscountCollectionType.entry_options configuration #}
     <tr {{ block('widget_attributes') }}>
-        <td>{{ form_widget(form.ingredient) }}</td>
+        
+        <td>{{ form_widget(form.extra) }}</td>
+        <td>{{ form_widget(form.alias) }}</td>
         <td>{{ form_widget(form.quantity) }}</td>
         <td>{{ form_widget(form.unit) }}</td>
+        <td>{{ form_widget(form.cost) }}</td>
         <td class="text-center">
             <a href="#" class="collection-remove btn btn-danger" title="Delete element"><i class="fa fa-l fa-minus-circle"></i></a>
         </td>
+        
+        
     </tr>
 
 {% endblock %}
 {% block collection_label %}
     {{label}}
 {% endblock %}
+
