--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -43,7 +43,7 @@
   <ul class="nav-dropdown-items">
 
     <li class="nav-item">
-      <a class="nav-link" href="profile/settings.html"><i class="icon-settings"></i>Información personal</a>
+      <a class="nav-link" href="{{ path('personal') }}"><i class="icon-settings"></i>Información personal</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="profile/payment.html"><i class="icon-credit-card"></i>Configuración</a>
