--- a/src/Resources/views/dashboard.html.twig
+++ b/src/Resources/views/dashboard.html.twig
@@ -96,8 +96,8 @@
           </div>
           <!--/.row-->
           <div class="chart-wrapper" style="height:300px;margin-top:40px;">
-            <!--<canvas id="main-chart" class="chart" height="300"></canvas> CHECAR JS-->
-          </div>
+                <canvas id="main-chart" class="chart" height="300"></canvas>
+           </div>
         </div>
         <div class="card-footer">
           <ul>
@@ -479,15 +479,6 @@
 {% endblock %}
 {% block javascripts %}
 <script>
-  loadCSS("{{asset('vendors/css/daterangepicker.min.css')}}");
-  loadCSS("{{asset('vendors/css/gauge.min.css')}}");
-  loadCSS("{{asset('vendors/css/toastr.min.css')}}");
-  var requireJS = [
-    "{{asset('vendors/js/toastr.min.js')}}",
-    "{{asset('vendors/js/gauge.min.js')}}",
-    "{{asset('vendors/js/moment.min.js')}}",
-    "{{asset('vendors/js/daterangepicker.min.js')}}"
-  ];
-  loadJS(requireJS, "{{asset('js/views/main.js')}}");
+ 
 </script>
 {% endblock %}
