--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,6 +9,8 @@
         <link href="{{asset('vendors/css/font-awesome.min.css')}}" rel="stylesheet">
         <link href="{{asset('vendors/css/simple-line-icons.min.css')}}" rel="stylesheet">
         <link href="{{asset('vendors/css/daterangepicker.min.css')}}" rel="stylesheet">
+        <link href="{{asset('vendors/css/gauge.min.css')}}" rel="stylesheet">
+        <link href="{{asset('vendors/css/toastr.min.css')}}" rel="stylesheet">
         <link href="{{asset('vendors/css/select2.min.css')}}" rel="stylesheet">
   <!-- Main styles for this application -->
         <link href="{{asset('css/style.css')}}" rel="stylesheet">
@@ -45,16 +47,26 @@
         <script src="{{asset('vendors/js/popper.min.js')}}"></script>
         <script src="{{asset('vendors/js/bootstrap.min.js')}}"></script>
         <script src="{{asset('vendors/js/pace.min.js')}}"></script>
+        
         <script src="{{asset('vendors/js/Chart.min.js')}}"></script>
         <script src="{{asset('js/views/shared.js')}}"></script>
+        
+        
+        <script src="{{asset('js/app.js')}}"></script>
+        
+        <script src="{{asset('vendors/js/toastr.min.js')}}"></script>
+        <script src="{{asset('vendors/js/gauge.min.js')}}"></script>
         <script src="{{asset('vendors/js/moment.min.js')}}"></script>
         <script src="{{asset('vendors/js/daterangepicker.min.js')}}"></script>
         <script src="{{ asset('vendors/js/bootbox.min.js') }}"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.6-rc.0/js/select2.min.js"></script>
         
+        <script src="{{asset('js/views/main.js')}}"></script>
+        
         {% block javascripts %}
             
         {% endblock %}
+        
         {% block footer %}
             {% include 'footer.html.twig' %}
         {% endblock %}
