--- a/templates/extra_theme.html.twig
+++ b/templates/extra_theme.html.twig
@@ -20,7 +20,7 @@
             <div class="card">
                 <div class="card-header">
                     {{form_label(form)}}
-                    <div class="card-actions" id="{{form.vars.name}}_action">
+                    <div class="card-actions" id="{{form.vars.id}}_action">
                         
                     </div>
                 </div>
