--- a/templates/sidebar.html.twig
+++ b/templates/sidebar.html.twig
@@ -67,13 +67,13 @@
             <a class="nav-link nav-dropdown-toggle" href="#"><i class="icon-book-open"></i>Menú</a>
             <ul class="nav-dropdown-items">
               <li class="nav-item">
-                <a class="nav-link" href="menu/category.html"><i class="icon-grid"></i>Categorias</a>
+                <a class="nav-link" href="{{path('menuCategory', {'cafeteria': cafeteria }) }}"><i class="icon-grid"></i>Categorias</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu/ingredient.html"><i class="icon-note"></i>Productos</a>
+                <a class="nav-link" href="{{path('menuProduct', {'cafeteria': cafeteria }) }}"><i class="icon-note"></i>Productos</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="menu/product.html"><i class="icon-cup"></i>Paquetes</a>
+                <a class="nav-link" href="{{path('menuBundle', {'cafeteria': cafeteria }) }}"><i class="icon-cup"></i>Paquetes</a>
               </li>
             </ul>
           </li>
